# openapi-generator-bazel

./: BUILD.bazel  MODULE.bazel  extension.bzl
internal/: openapi_generator.bzl
internal/test/bcr/: MODULE.bazel
internal/test/bcr-custom-version/: BUILD
