module(
    name = "openapi_tools_generator_bazel",
    version = "0.0.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_pkg", version = "1.0.1")

openapi_gen = use_extension("@openapi_tools_generator_bazel//:extension.bzl", "openapi_gen")
use_repo(openapi_gen, "openapi_tools_generator_bazel_cli")

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
